fix mobile table text wrap

--- a/style.css
+++ b/style.css
@@ -1092,8 +1092,13 @@ table {
 }
 
 
-/* 🔥 BIAR TEKS TURUN (WRAP) */
-td {
+/* 🔥 BIAR TEKS TABEL TIDAK PECAH */
+.monitoring-table td {
+  white-space: nowrap;
+}
+
+/* 🔥 KHUSUS KOLOM NAMA ALAT BOLEH TURUN */
+.monitoring-table td:nth-child(2) {
   white-space: normal;
   word-wrap: break-word;
 }
@@ -1837,7 +1842,7 @@ animation:
 /* KONDISI */
 .monitoring-table th:nth-child(3),
 .monitoring-table td:nth-child(3) {
-  width: 80px;
+  width: 90px;
   text-align: center;
 }
 
